# youtube_agent

./: .env-example  .gitignore  Dockerfile  LICENSE  README.md  langgraph.json  main.py  pyproject.toml  requirements.txt  server.py
app/agents/: agent_resultTBD.py  base.py
app/agents/keywords/: keywords_agent.py
app/agents/ontology/: ontology_agent.py  ontology_evaluator.py  researched_state.py  topic_ontology.py
app/agents/youtube/: state.py  youtube_agent.py  youtube_nodes.py_  youtube_process_state.py
app/api/: server.py
app/common/content/: content_summarizer.py  youtube.py  youtube_search.py
app/common/llm/: langchain_llm.py  (+1 more)
app/configs/: app_config.py  logging_config.py  prompt-templates.py  settings.py
app/prompts/: ontology_prompts.py  summarizer_prompts.py
app/research_agent/: agent.py
app/tools/: file_storage.py  storage_interface.py  youtube.py
app/workflows/: keyword_discovery_workflow.py  ontology_creation_workflow.py  test_flow.py
data/test/: curriculum-keywords.json  curriculum-ontology.json  health-ontology.json  ontology_quantum_computing.json  test.txt  transcript-summary.txt  transcript.txt  videos_health-physical health-strength training.json  youtube-result-single.json  youtube_result_single.json  youtube_results-temp.json
deploy/: DEPLOY.md  create-service-account.sh  create-service.sh  deploy-to-cloud-run.sh  deploy.sh  variables.sh
docs/: flow.md
scripts/: add_root.py  download_videos.py  draw_agent_flow.py  get_youtube_video_stat.py  run_research_agent.py
tests/utils/: test_tools.py
tests/visual/: draw_test.py
(+57 files in other folders)
